Fix sidebar not showing on desktop

--- a/template.css
+++ b/template.css
@@ -92,6 +92,9 @@ button {
         width: auto;
         height: auto;
 
+        animation: none;
+        transform: none;
+
         grid-area: aside;
     }
 
